cleanup htmlbuilder
Change-Id: Ib4e94ed4ea5246cfdefec44fcf705f29a0cc38f3